# SDD-banking-app

./: .gitignore  README.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .env.sample  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  accounts.py  transactions.py  transfer.py
backend/src/config/: __init__.py  settings.py
backend/src/data/: __init__.py  sample_data.json  seed_data.py
backend/src/database/: __init__.py  connection.py  crud.py  init_db.py  sample_data.py  schema.sql  seed_banks.py
backend/src/database/migrations/: 001_create_virtual_bank.py  002_create_transfer.py  003_add_account_transfer_fields.py  004_add_transaction_transfer_fields.py
backend/src/middleware/: __init__.py  cors.py
backend/src/models/: __init__.py  database_models.py  schemas.py  transfer.py  virtual_bank.py
backend/src/routers/: __init__.py
backend/src/services/: __init__.py  bank_interface.py  transaction_service.py  transfer_service.py
backend/src/utils/: __init__.py  formatting.py  validators.py
backend/tests/: __init__.py
frontend/: .eslintignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccountSelector.tsx  DatePresets.tsx  DateRangeFilter.tsx  Layout.tsx  TransactionDetail.tsx  (+4 more)
specs/001-transaction-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-transfer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+21 files in other folders)
